remove Java 8 and 11 support; upgrade library versions